[package]
authors = ["Xavier Lau <xavier@inv.cafe>"]
categories = [
	"encoding",
	"no-std",
]
description = "A collection of array/bytes/hex utilities."
edition = "2021"
homepage = "https://hack.ink/array-bytes"
keywords = [
	"array",
	"hex",
	"no-std",
	"slice",
	"vec",
]
license = "Apache-2.0/GPL-3.0"
name = "array-bytes"
readme = "README.md"
repository = "https://github.com/hack-ink/array-bytes"
version = "6.2.3"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[dependencies]
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
const-hex  = { version = "1.11" }
criterion  = { version = "0.5" }
faster-hex = { version = "0.9" }
hex        = { version = "0.4" }
rustc-hex  = { version = "2.1" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[[bench]]
harness = false
name    = "bench"
