[package]
authors = ["Xavier Lau <x@acg.box>"]
categories = [
	"algorithms",
	"encoding",
	"no-std",
	"parsing",
	"wasm",
]
description = "A collection of Array/Bytes/Hex utilities with full No-STD compatibility."
edition = "2021"
homepage = "https://hack.ink/array-bytes"
keywords = [
	"array",
	"hex",
	"no-std",
	"slice",
	"vec",
]
license = "Apache-2.0/GPL-3.0"
name = "array-bytes"
readme = "README.md"
repository = "https://github.com/hack-ink/array-bytes"
version = "9.1.2"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[features]
serde = [
	"dep:serde",
	"serde_bytes",
]

[dependencies]
serde       = { version = "1.0", optional = true, default-features = false }
serde_bytes = { version = "0.11", optional = true, default-features = false, features = ["alloc"] }
smallvec    = { version = "1.13" }

[dev-dependencies]
const-hex  = { version = "1.14" }
criterion  = { version = "0.5" }
faster-hex = { version = "0.10" }
hex_crate  = { package = "hex", version = "0.4" }
rustc-hex  = { version = "2.1" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[[bench]]
harness = false
name    = "bench"
