[package]
authors = ["Xavier Lau <x@acg.box>"]
categories = [
	"algorithms",
	"encoding",
	"no-std",
	"parsing",
	"wasm",
]
description = "A collection of Array/Bytes/Hex utilities with full No-STD compatibility."
edition = "2024"
homepage = "https://hack.ink/array-bytes"
keywords = [
	"array",
	"hex",
	"no-std",
	"slice",
	"vec",
]
license = "Apache-2.0/GPL-3.0"
name = "array-bytes"
readme = "README.md"
repository = "https://github.com/hack-ink/array-bytes"
version = "9.3.0"

[package.metadata.docs.rs]
all-features = true

[profile.ci-dev]
incremental = false
inherits    = "dev"

[features]
serde = [
	# crates.io
	"dep:serde",
	"serde_bytes",
]

[dependencies]
# crates.io
serde       = { version = "1.0", optional = true, default-features = false }
serde_bytes = { version = "0.11", optional = true, default-features = false, features = ["alloc"] }
smallvec    = { version = "1.15" }
thiserror   = { version = "2.0", default-features = false }

[dev-dependencies]
# crates.io
const-hex  = { version = "1.15" }
criterion  = { version = "0.6" }
faster-hex = { version = "0.10" }
hex_crate  = { package = "hex", version = "0.4" }
rustc-hex  = { version = "2.1" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[[bench]]
harness = false
name    = "bench"
