[package]
authors  = ["Xavier Lau <xavier@inv.cafe>"]
edition  = "2021"
metadata = { cargo-fuzz = true }
name     = "array-bytes-fuzz"
publish  = false
version  = "5.0.0"

[dependencies]
array-bytes   = { version = "5.0", path = ".." }
libfuzzer-sys = { version = "0.4" }

[workspace]
members = ["."]

[[bin]]
doc  = false
name = "bytes-hex-conversion"
path = "fuzz_targets/bytes_hex_conversion.rs"
test = false
