[package]
authors = ["Xavier Lau <x@acg.box>"]
edition = "2021"
name    = "array-bytes-fuzz"
publish = false
version = "6.1.0"

[package.metadata]
cargo-fuzz = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
array-bytes   = { version = "8.0", path = ".." }
libfuzzer-sys = { version = "0.4" }

[workspace]
members = ["."]

[[bin]]
doc  = false
name = "bytes-hex-conversion"
path = "fuzz_targets/bytes_hex_conversion.rs"
test = false
