[package]
authors = ["Xavier Lau <x@acg.box>"]
edition = "2021"
name    = "array-bytes-fuzz"
publish = false
version = "9.0.0"

[package.metadata]
cargo-fuzz = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
array-bytes   = { version = "9.0", path = ".." }
libfuzzer-sys = { version = "0.4" }

[workspace]
members = ["."]

[[bin]]
doc  = false
name = "hexify-dehexify"
path = "fuzz_targets/hexify_dehexify.rs"
test = false
